--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
-name = "congress"
-version = "0.1.0"
-description = ""
-authors = ["aurbina83 <aurbina83@gmail.com>"]
+name = "pb-congress-scraper"
+version = "0.0.4"
+description = "Public domain data collectors for the work of Congress, including legislation, amendments, and votes."
+authors = ["The unitedstates organization on GitHub"]
 readme = "README.md"
+license = "CC0-1.0"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10,<3.13"
 beautifulsoup4 = "^4.12.3"
 cssselect = "^1.2.0"
 iso8601 = "^2.1.0"
@@ -20,8 +21,6 @@ pyyaml = "^6.0.2"
 scrapelib = "^2.3.0"
 xmltodict = "^0.14.2"
 packaging = "^24.2"
-boto3 = {extras = ["s3"], version = "^1.36.6"}
-
 
 [build-system]
 requires = ["poetry-core"]
